--- a/src/index.css
+++ b/src/index.css
@@ -1,42 +1,57 @@
-body{
+body {
     background-color: #e5e5e5 !important;
 }
-.navbar{
-    box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
-    -webkit-box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
-    -moz-box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
+
+.navbar {
+    box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
     margin: 15px 15px 30px 18%;
     border-radius: 10px;
     background-color: #fff;
 }
-.nav li{
+
+.nav li {
     margin: 0 0 10px;
 }
-.nav li a{
-   display: block;
-    padding: 10px 15px !important;
+
+.nav li a {
+    display: block;
+    padding: 10px 8px !important;
     color: #000;
     font-size: 16px;
 }
 
-.nav li a span{
+.nav li a span {
     margin: 0 0 0 8px !important;
 }
 
-.nav li a:hover{
-    color: #fff;
-    background-color:#3DB1FF;
+.logo img {
+    display: block;
 }
-.main-part{
+
+@media (max-width: 768px) {
+    .logo img {
+        display: none;
+    }
+}
+
+.nav li a:hover {
+    color: #fff;
+    background-color: #3DB1FF;
+}
+
+.main-part {
     padding: 20px !important;
     margin: 0 15px 15px 18%;
     border-radius: 10px;
     background-color: #fff;
-    box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
-    -webkit-box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
-    -moz-box-shadow: 3px 0px 5px 2px rgba(0,0,0,0.1);
+    box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 3px 0px 5px 2px rgba(0, 0, 0, 0.1);
 }
-.bg-sidebar{
+
+.bg-sidebar {
     color: #000;
     position: fixed;
     left: 0;
@@ -44,21 +59,24 @@ body{
     bottom: 0;
     padding: 20px;
     background-color: #fff;
-    box-shadow: 3px 0px 11px 2px rgba(0,0,0,0.1);
-    -webkit-box-shadow: 3px 0px 11px 2px rgba(0,0,0,0.1);
-    -moz-box-shadow: 3px 0px 11px 2px rgba(0,0,0,0.1);
+    box-shadow: 3px 0px 11px 2px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 3px 0px 11px 2px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 3px 0px 11px 2px rgba(0, 0, 0, 0.1);
 }
-.bg-sidebar .logo{
+
+.bg-sidebar .logo {
     display: block;
     width: 120px;
     margin: 0 auto 25px;
     text-align: center;
 }
-.bg-sidebar .logo img{
+
+.bg-sidebar .logo img {
     width: 100%;
 }
-.card-header{
-    background-color: rgba(0,0,0,0.18) !important;
+
+.card-header {
+    background-color: rgba(0, 0, 0, 0.18) !important;
 }
 
 .loader {
@@ -68,43 +86,49 @@ body{
     bottom: 0;
     top: 0;
     z-index: 9999;
-    background-color: rgba(0,0,0,0.15);
+    background-color: rgba(0, 0, 0, 0.15);
 }
-.spinner-border{
+
+.spinner-border {
     position: fixed;
     left: 50%;
     top: 50%;
     margin-left: 100px;
 }
-.login-block{
-    padding:50px 50px 100px;
+
+.login-block {
+    padding: 50px 50px 100px;
     border-radius: 50px;
     background-color: #fff;
-    box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
-    -webkit-box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
-    -moz-box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
+    box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
+    -webkit-box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
+    -moz-box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
     min-height: 400px;
 
 
 }
-.logo-login{
+
+.logo-login {
     display: block;
     margin: 0 auto 30px;
 }
-.login-block h2{
+
+.login-block h2 {
 
     margin-bottom: 40px;
 }
-.login-block input{
+
+.login-block input {
     font-size: 16px;
     border-radius: 30px;
 }
-.login-block button{
+
+.login-block button {
     font-size: 18px;
     border-radius: 30px;
 }
 
-.login-block .text-danger{
+.login-block .text-danger {
     font-size: 14px;
     display: block;
     padding: 3px;
@@ -112,22 +136,25 @@ body{
     text-align: left;
 }
 
-.login-block .expiry-time{
+.login-block .expiry-time {
     font-size: 14px;
     text-align: right;
 }
-.login-block .btn-refresh{
+
+.login-block .btn-refresh {
     border: none;
     display: block;
     margin: 0 auto;
     font-size: 13px;
     background-color: transparent;
 }
+
 .btn-primary {
     background-color: #1F5BE3 !important;
     border-color: #3DB1FF !important;
 }
-.login-block .btn-refresh i{
+
+.login-block .btn-refresh i {
     width: 100px;
     height: 100px;
     font-size: 35px;
@@ -137,27 +164,32 @@ body{
     line-height: 100px;
     margin: 0 auto 8px;
     display: block;
-    background-color: rgb(13,110,253,0.8);
-    box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
-    -webkit-box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
-    -moz-box-shadow: 0px 2px 11px 2px rgba(13,110,253,0.1);
+    background-color: rgb(13, 110, 253, 0.8);
+    box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
+    -webkit-box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
+    -moz-box-shadow: 0px 2px 11px 2px rgba(13, 110, 253, 0.1);
 }
+
 .move-right {
     animation: moveright 1.2s 1 normal forwards;
 
 }
+
 @keyframes moveright {
     from {
         transform: translateX(500px);
     }
+
     to {
         transform: translateX(0px);
     }
 }
+
 .active {
-    border: none!important;
+    border: none !important;
     font-weight: normal;
 }
+
 .btn.btn-primary.accept {
     background-color: #E1F4E9;
     background-repeat: no-repeat;
@@ -168,7 +200,8 @@ body{
     border-radius: 36px;
     margin-right: 5px;
 }
-.btn.btn-primary.reject{
+
+.btn.btn-primary.reject {
     background-color: #FCEAEA;
     background-repeat: no-repeat;
     background-position: 11px 50%;
@@ -177,24 +210,29 @@ body{
     padding: 0 12px 0 12px;
     border-radius: 36px;
 }
-.btn.btn-primary.accept:focus{
+
+.btn.btn-primary.accept:focus {
     background-color: #E1F4E9 !important;
-    color: #3DB1FF!important;
+    color: #3DB1FF !important;
 }
-.btn.btn-primary.reject:focus{
+
+.btn.btn-primary.reject:focus {
     background-color: #FCEAEA !important;
-    color: #EB5757!important;
+    color: #EB5757 !important;
 }
+
 .branch-tabs {
     display: table;
     width: 100%;
     margin: 20px 0 !important;
 }
+
 .branch-tabs .nav-item {
     display: table-cell;
     vertical-align: middle;
     width: 33.33%;
 }
+
 .branch-tabs .nav-item .nav-link {
     display: block;
     text-align: center;
@@ -204,7 +242,8 @@ body{
     font-size: 16px;
 }
 
-.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+.nav-pills .nav-link.active,
+.nav-pills .show>.nav-link {
     color: var(--bs-nav-pills-link-active-color);
     background-color: #1F5BE3 !important;
 }
